--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "KirinDev",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^14.5.0"
+    "discord.js": "^14.5.0",
+    "dotenv": "^16.0.3"
   }
 }
