--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-TOKEN=MTAyNjYxMDA1ODk5NTQ0MTc2NA.GyUbiC.svl0-fKQtPVbq-9EvM0wP1ufFVRBo1_DZuFgzg
+TOKEN=MTAyNjYxMDA1ODk5NTQ0MTc2NA.Ge769Y.nnrwGW5mQEf7UyblXBz5yH6MuzfjkyTFPD-IjM
